# Fablr

./: .bashrc  .gitignore  .pre-commit-config.yaml  00_scratch.ipynb  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postcreate.sh
.github/workflows/: pytest.yaml
fablr/: __init__.py  dataframes.py  extended_providers.py
fablr/sample_assets/: artists.py
tests/test_dataframes/: test_dataframes.py
