[tool.poetry]
name = "fablr"
version = "0.1.0"
description = ""
authors = ["Jesus Caro <jmcaro2@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pendulum = "^2.1.2"
faker = "^19.13.0"
usaddress = "^0.5.10"
pandas = "1.3.0"
datetime = "^5.3"
pre-commit = "^3.5.0"
ruff = "^0.1.7"
isort = "^5.13.0"
black = "^23.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
