[tool.poetry]
name = "fablr"
version = "0.2.0"
description = ""
authors = ["Jesus Caro <jmcaro2@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
usaddress = "^0.5.10"
pandas = "1.5.0"
datetime = "^5.3"
pre-commit = "^3.5.0"
ruff = "^0.1.7"
isort = "^5.13.0"
faker = "19.13.0"
poetry-dynamic-versioning = "^1.2.0"
pendulum = "^3.0.0"
pytest = "^7.4.4"
numpy = "1.23.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.9"
black = "23.11.0"

[build-system]
requires = ["poetry-core", "poetry_dynamic_versioning"]
build-backend = "poetry_dynamic_versioning.backend"
